--- a/src/layouts/Sidebar.astro
+++ b/src/layouts/Sidebar.astro
@@ -66,7 +66,7 @@ import Reading from "../components/Reading.astro";
   import { Octokit } from "https://esm.sh/@octokit/core";
 
   const octokit = new Octokit({
-    auth: `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`,
+    auth: process.env.GITHUB_API_KEY,
   });
 
   const response = await octokit.request("GET /repos/{owner}/{repo}/commits", {
