Using dvh and dvw for viewport styling

--- a/src/styles/article.scss
+++ b/src/styles/article.scss
@@ -26,8 +26,8 @@
     sans-serif;
   font-size: 15px;
   padding: 30px 40px 10px 40px;
-  min-height: 100vh;
-  height: 100vh;
+  min-height: 100dvh;
+  height: 100dvh;
   overflow-y: scroll;
   scroll-behavior: smooth;
   background-color: black;
