--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,8 +1,8 @@
 .index-container {
   display: grid;
   grid-template-columns: 1fr 1.2fr;
-  height: 100vh;
-  min-height: 100vh;
+  height: 100dvh;
+  min-height: 100dvh;
   overflow-y: hidden;
 }
 
