--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -11,8 +11,8 @@
   scroll-behavior: smooth;
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
-  height: 100vh;
+  min-height: 100dvh;
+  height: 100dvh;
   gap: 55px;
 }
 
