--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -45,7 +45,7 @@ html:focus-within {
 
 /* Set core body defaults */
 body {
-  min-height: 100vh;
+  min-height: 100dvh;
   text-rendering: optimizeSpeed;
   line-height: 1.5;
 }
