--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -52,7 +52,7 @@ a {
 .sidebar-container {
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  height: 100dvh;
   gap: 55px;
   padding: 25px;
   overflow-y: scroll;
