--- a/src/layouts/Sidebar.astro
+++ b/src/layouts/Sidebar.astro
@@ -40,11 +40,16 @@ const dateFormat = date.toDateString();
           <a href="https://twitter.com/_yihui" target="_blank">Twitter</a>
         </li>
         <li><a href="https://read.cv/yihui" target="_blank">Read.cv</a></li>
-        <li>
+        <!-- <li>
           <a
             href="https://www.goodreads.com/user/show/62844518-yihui"
             target="_blank">Goodreads</a
           >
+        </li> -->
+        <li>
+          <a href="/links" target="_blank">
+            More →
+          </a>
         </li>
       </ul>
     </div>
