--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -12,7 +12,7 @@ import "../../styles/about.scss";
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
     <meta name="description" content="Yihui Hu personal site" />
-    <title>Yihui Hu</title>
+    <title>About</title>
   </head>
   <body>
     <div class="index-container">
