--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,7 +15,7 @@ import "../styles/index.scss";
     <title>Yihui Hu</title>
   </head>
   <body>
-    <div class={"index-container"}>
+    <div class="index-container">
       <Sidebar />
       <Content client:only="react" />
     </div>
