--- a/src/layouts/Sidebar.astro
+++ b/src/layouts/Sidebar.astro
@@ -40,16 +40,8 @@ const dateFormat = date.toDateString();
           <a href="https://twitter.com/_yihui" target="_blank">Twitter</a>
         </li>
         <li><a href="https://read.cv/yihui" target="_blank">Read.cv</a></li>
-        <!-- <li>
-          <a
-            href="https://www.goodreads.com/user/show/62844518-yihui"
-            target="_blank">Goodreads</a
-          >
-        </li> -->
         <li>
-          <a href="/links" target="_blank">
-            More →
-          </a>
+          <a href="/links"> More →</a>
         </li>
       </ul>
     </div>
