Fixed padding for about page on mobile

--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -23,25 +23,23 @@ import "../../styles/about.scss";
         <div class="about-page-container">
           <p>Me</p>
           <div>
-          <img class="about-image"
-            src="/assets/about/toe-recreation.gif"
-          />
-          <p class="about-image-caption">c. Dec 2021</p>
+            <img class="about-image" src="/assets/about/toe-recreation.gif" />
+            <p class="about-image-caption">c. Dec 2021</p>
           </div>
-          <div class="about-blurb">
+          <div class="about-blurb" style={{ marginBottom: "55px" }}>
+            <p>Hello! I'm Yihui.</p>
+            <br />
             <p>
-              Hello! I'm Yihui.
+              I'm from Singapore, currently studying CS at Tufts in Medford. I'm
+              interested in creating shared experiences on the web and building
+              with polish and performance in mind. In my free time, I continue
+              to explore type, print, design and zine-making.
             </p>
-            <br/>
+            <br />
             <p>
-              I'm from Singapore, currently studying CS at Tufts in Medford. 
-              I'm interested in creating shared experiences on the web and
-              building with polish and performance in mind. In my free time, I
-              continue to explore type, print, design and zine-making.
-            </p>
-            <br/>
-            <p>
-              You can view my CV <a href="/assets/about/Yihui_Hu_CV_2023.pdf">here</a>.
+              You can view my CV <a href="/assets/about/Yihui_Hu_CV_2023.pdf"
+                >here</a
+              >.
             </p>
           </div>
         </div>
