--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -51,7 +51,6 @@
   }
 
   .about-page-container {
-    padding: 15px;
     height: auto;
   }
 
@@ -65,13 +64,20 @@
   .back-button p > a {
     color: base.$gray-content;
     text-decoration: none;
-  
+
     &:visited {
       color: base.$gray-content;
     }
-  
+
     &:hover {
       text-decoration: none;
     }
+  }
+}
+
+@media screen and (max-width: 640px) {
+  .about-page-container {
+    padding: 15px;
+    height: auto;
   }
 }
