Moved links and about page one level up

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,8 +1,8 @@
 ---
-import Sidebar from "../../layouts/Sidebar.astro";
-import "../../styles/global.scss";
-import "../../styles/index.scss";
-import "../../styles/about.scss";
+import Sidebar from "../layouts/Sidebar.astro";
+import "../styles/global.scss";
+import "../styles/index.scss";
+import "../styles/about.scss";
 ---
 
 <html lang="en">
