--- a/src/pages/links.astro
+++ b/src/pages/links.astro
@@ -1,8 +1,8 @@
 ---
 import "@fontsource/fragment-mono";
-import "../../styles/global.scss";
-import "../../styles/sidebar.scss";
-import "../../styles/links.scss";
+import "../styles/global.scss";
+import "../styles/sidebar.scss";
+import "../styles/links.scss";
 ---
 
 <html lang="en">
