--- a/src/pages/links.astro
+++ b/src/pages/links.astro
@@ -17,36 +17,37 @@ import "../styles/links.scss";
     <div class="links-container">
       <a class="links-name" href="/">Yihui Hu</a>
       <div class="links">
-        I reside in many corners of the web. I collect things on <a
+        I reside in many corners of the web. I collect things on ✶✶ <a
           href="https://are.na/yihui-h"
           target="_blank">Are.na</a
-        >. I always have my hands full with (side) projects, which I publish on <a
+        >. I always have my hands full with (side) projects, which I publish on 💻 <a
           href="https://github.com/yihui-hu"
           target="_blank">GitHub</a
-        > wherever possible. You can view a nice version of my resume on <a
+        > wherever possible. You can view a nice version of my resume on 📃 <a
           href="https://read.cv/yihui"
           target="_blank">Read.cv</a
-        >, or find me on their new Twitter-lite, <a
+        >, or find me on their new Twitter-lite, 🔖 <a
           href="https://posts.cv/yihui"
           target="_blank">Posts</a
-        >. I try to read as much as I can, and update my reading lists on <a
+        >. I try to read as much as I can, and update my reading lists on 📚 <a
           href="https://www.goodreads.com/user/show/62844518-yihui"
           target="_blank">Goodreads</a
-        >. I have an <a
-          href="https://www.instagram.com/yihui_hu"
-          target="_blank">Instagram</a
+        > / <a href="https://oku.club/user/yihui" target="_blank">Oku</a>. I
+        have an 📸 <a href="https://www.instagram.com/yihui_hu" target="_blank"
+          >Instagram</a
         >, but I'm not active on there. I'm not a big movie person but I've been
-        watching more of them over the summer, and was persuaded to make a <a
+        watching more of them over the summer (2023), and was persuaded to make a 🍿 <a
           href="https://letterboxd.com/yihui"
           target="_blank">Letterboxd</a
-        >, so I have that too. I also have <a
+        >, so I have that too. I also have ☁️ <a
           href="https://bsky.app/profile/yihui.bsky.social"
           target="_blank">Bluesky</a
-        >. Though, most times, I'm on <a
+        >. Though, most times, I'm on 🐦 <a
           href="https://twitter.com/_yihui"
           target="_blank">Twitter</a
         >.
       </div>
+      <a href="/">← Home</a>
     </div>
   </body>
 </html>
