Minor styling fixes for links

--- a/src/pages/links.astro
+++ b/src/pages/links.astro
@@ -8,8 +8,8 @@ import "../styles/links.scss";
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="description" content="Links to corners of the web" />
     <title>Links</title>
   </head>
@@ -20,10 +20,9 @@ import "../styles/links.scss";
         I reside in many corners of the web. I collect things on ✶✶ <a
           href="https://are.na/yihui-h"
           target="_blank">Are.na</a
-        >. I always have my hands full with (side) projects, which I publish on 💻 <a
-          href="https://github.com/yihui-hu"
-          target="_blank">GitHub</a
-        > wherever possible. You can view a nice version of my resume on 📃 <a
+        >. I always have my hands full with (side) projects, which I publish on
+        💻 <a href="https://github.com/yihui-hu" target="_blank">GitHub</a> wherever
+        possible. You can view a nice version of my resume on 📃 <a
           href="https://read.cv/yihui"
           target="_blank">Read.cv</a
         >, or find me on their new Twitter-lite, 🔖 <a
@@ -36,9 +35,9 @@ import "../styles/links.scss";
         have an 📸 <a href="https://www.instagram.com/yihui_hu" target="_blank"
           >Instagram</a
         >, but I'm not active on there. I'm not a big movie person but I've been
-        watching more of them over the summer (2023), and was persuaded to make a 🍿 <a
-          href="https://letterboxd.com/yihui"
-          target="_blank">Letterboxd</a
+        watching more of them over the summer (2023), and was persuaded to make
+        a 🍿 <a href="https://letterboxd.com/yihui" target="_blank"
+          >Letterboxd</a
         >, so I have that too. I also have ☁️ <a
           href="https://bsky.app/profile/yihui.bsky.social"
           target="_blank">Bluesky</a
@@ -47,7 +46,9 @@ import "../styles/links.scss";
           target="_blank">Twitter</a
         >.
       </div>
-      <a href="/">← Home</a>
+      <div style={{ paddingBottom: "55px" }}>
+        <a href="/">← Home</a>
+      </div>
     </div>
   </body>
 </html>
