--- a/src/pages/links.astro
+++ b/src/pages/links.astro
@@ -28,6 +28,9 @@ import "../styles/links.scss";
         >, or find me on their new Twitter-lite, 🔖 <a
           href="https://posts.cv/yihui"
           target="_blank">Posts</a
+        >. For the no-funny-business side of things, see my 💼 <a
+          href="https://www.linkedin.com/in/yihuihu"
+          target="_blank">LinkedIn</a
         >. I try to read as much as I can, and update my reading lists on 📚 <a
           href="https://www.goodreads.com/user/show/62844518-yihui"
           target="_blank">Goodreads</a
@@ -44,7 +47,7 @@ import "../styles/links.scss";
         >. Though, most times, I'm on 🐦 <a
           href="https://twitter.com/_yihui"
           target="_blank">Twitter</a
-        >.
+        >. Phew.
       </div>
       <div style={{ paddingBottom: "55px" }}>
         <a href="/">← Home</a>
