--- a/src/components/Reading.astro
+++ b/src/components/Reading.astro
@@ -1,20 +1,18 @@
 ---
-import "../styles/reading.scss";
+import "../styles/currently.scss";
 ---
 
-<div id="reading-wrapper">
-  <p class="header">I'm reading:</p>
-  <div id="reading-container">
-    <a id="reading-link" href="https://www.goodreads.com/book/show/59364173-i-m-glad-my-mom-died" target="_blank"
-      ><img
-        id="reading-art"
-        src="/assets/reading.jpg"
-      /></a
+<div>
+  <span class="currently-header">I'm reading:</span>
+  <div id="currently-container">
+    <a
+      href="https://www.goodreads.com/book/show/54120408-klara-and-the-sun"
+      target="_blank"><img id="currently-image" src="/assets/reading.jpg" /></a
     >
-    <div class="reading-info">
-      <p id="reading-title">I'm Glad My Mom Died</p>
-      <p id="reading-author">Jeanette McCurdy</p>
-      <p id="reading-progress">2022</p>
+    <div id="currently-info">
+      <span>Klara and the Sun</span>
+      <span>by Kazuo Ishiguro</span>
+      <span>Jun 2023</span>
     </div>
   </div>
 </div>
