--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,5 +1,9 @@
 @use 'base';
 
+html {
+  -webkit-text-size-adjust: 100%;
+}
+
 /* Box sizing rules */
 *,
 *::before,
@@ -7,35 +11,17 @@
   box-sizing: border-box;
 }
 
-/* Remove default margin */
-body,
-h1,
-h2,
-h3,
-h4,
-p,
-figure,
-blockquote,
-dl,
-dd {
-  margin: 0;
-}
-
+/* Highlight / selection */
 p,
 a,
 li,
 div,
-br {
+br,
+span {
   &::selection {
     color: base.$gray-bg;
     background-color: base.$gray-content;
   }
-}
-
-/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
-ul[role='list'],
-ol[role='list'] {
-  list-style: none;
 }
 
 /* Set core root defaults */
@@ -48,11 +34,7 @@ body {
   min-height: 100dvh;
   text-rendering: optimizeSpeed;
   line-height: 1.5;
-}
-
-/* A elements that don't have a class get default styles */
-a:not([class]) {
-  text-decoration-skip-ink: auto;
+  margin: 0;
 }
 
 /* Make images easier to work with */
@@ -70,18 +52,48 @@ select {
   font: inherit;
 }
 
-/* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
-@media (prefers-reduced-motion: reduce) {
-  html:focus-within {
-   scroll-behavior: auto;
+.name {
+  font-family: "Fragment Mono", monospace, Arial, Helvetica, sans-serif;;
+  display: flex;
+  justify-content: space-between;
+}
+
+.name-link {
+  font-size: 14px;
+  text-decoration: none;
+
+  &:visited {
+    color: black;
   }
-  
-  *,
-  *::before,
-  *::after {
-    animation-duration: 0.01ms !important;
-    animation-iteration-count: 1 !important;
-    transition-duration: 0.01ms !important;
-    scroll-behavior: auto !important;
+
+  &:hover {
+    text-decoration: none;
+  }
+}
+
+.wavy-link {
+  text-decoration: underline;
+  text-decoration-style: wavy;
+  text-decoration-color: base.$gray-content;
+
+  &:hover {
+    text-decoration-style: wavy;
+  }
+
+  &:visited {
+    color: inherit
+  }
+}
+
+.gray-link {
+  color: base.$gray-content;
+  text-decoration: none;
+
+  &:visited {
+    color: base.$gray-content;
+  }
+
+  &:hover {
+    text-decoration: none;
   }
 }
