--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -21,30 +21,31 @@ import "../styles/about.scss";
       </div>
       <div class="about-page-wrapper">
         <div class="about-page-container">
-          <p>Me</p>
+          <span>Me</span>
           <div>
             <img class="about-image" src="/assets/about/toe-recreation.gif" />
-            <p class="about-image-caption">c. Dec 2021</p>
+            <span class="about-image-caption">c. Dec 2021</span>
           </div>
-          <div class="about-blurb" style={{ marginBottom: "55px" }}>
-            <p>Hello! I'm Yihui.</p>
-            <br />
-            <p>
+          <div class="about" style={{ marginBottom: "55px" }}>
+            <span>Hello! I'm Yihui.</span>
+            <span>
               I'm from Singapore, currently studying CS at Tufts in Medford. I'm
               interested in creating shared experiences on the web and building
               with polish and performance in mind. In my free time, I continue
               to explore type, print, design and zine-making.
-            </p>
-            <br />
-            <p>
-              You can view my CV <a href="/assets/about/Yihui_Hu_CV_2023.pdf"
-                >here</a
+            </span>
+            <span>
+              You can view my CV <a
+                href="/assets/about/Yihui_Hu_CV_2023.pdf"
+                class="wavy-link">here</a
               >.
-            </p>
+            </span>
           </div>
         </div>
         <div class="back-button">
-          <p class="back-button"><a href="/">Home</a></p>
+          <span class="back-button">
+            <a class="gray-link" href="/">Home</a>
+          </span>
         </div>
       </div>
     </div>
