--- a/src/pages/links.astro
+++ b/src/pages/links.astro
@@ -2,7 +2,6 @@
 import "@fontsource/fragment-mono";
 import "../styles/global.scss";
 import "../styles/sidebar.scss";
-import "../styles/links.scss";
 ---
 
 <html lang="en">
@@ -14,37 +13,56 @@ import "../styles/links.scss";
     <title>Links</title>
   </head>
   <body>
-    <div class="links-container">
-      <a class="links-name" href="/">Yihui Hu</a>
-      <div class="links">
+    <div class="sidebar-container">
+      <span class="name">
+        <a class="name-link" href="/">Yihui Hu</a>
+      </span>
+      <div style={{ maxWidth: "350px" }}>
         I reside in many corners of the web. I collect things on ✶✶ <a
+          class="wavy-link"
           href="https://are.na/yihui-h"
           target="_blank">Are.na</a
         >. I always have my hands full with (side) projects, which I publish on
-        💻 <a href="https://github.com/yihui-hu" target="_blank">GitHub</a> wherever
-        possible. You can view a nice version of my resume on 📃 <a
+        💻 <a
+          class="wavy-link"
+          href="https://github.com/yihui-hu"
+          target="_blank">GitHub</a
+        > wherever possible. You can view a nice version of my resume on 📃 <a
+          class="wavy-link"
           href="https://read.cv/yihui"
           target="_blank">Read.cv</a
         >, or find me on their new Twitter-lite, 🔖 <a
+          class="wavy-link"
           href="https://posts.cv/yihui"
           target="_blank">Posts</a
         >. For the no-funny-business side of things, see my 💼 <a
+          class="wavy-link"
           href="https://www.linkedin.com/in/yihuihu"
           target="_blank">LinkedIn</a
         >. I try to read as much as I can, and update my reading lists on 📚 <a
+          class="wavy-link"
           href="https://www.goodreads.com/user/show/62844518-yihui"
           target="_blank">Goodreads</a
-        > / <a href="https://oku.club/user/yihui" target="_blank">Oku</a>. I
-        have an 📸 <a href="https://www.instagram.com/yihui_hu" target="_blank"
-          >Instagram</a
+        > / <a
+          class="wavy-link"
+          href="https://oku.club/user/yihui"
+          target="_blank">Oku</a
+        >. I have an 📸 <a
+          class="wavy-link"
+          href="https://www.instagram.com/yihui_hu"
+          target="_blank">Instagram</a
         >, but I'm not active on there. I'm not a big movie person but I've been
         watching more of them over the summer (2023), and was persuaded to make
-        a 🍿 <a href="https://letterboxd.com/yihui" target="_blank"
-          >Letterboxd</a
+        a 🍿 <a
+          class="wavy-link"
+          href="https://letterboxd.com/yihui"
+          target="_blank">Letterboxd</a
         >, so I have that too. I also have ☁️ <a
+          class="wavy-link"
           href="https://bsky.app/profile/yihui.bsky.social"
           target="_blank">Bluesky</a
         >. Though, most times, I'm on 🐦 <a
+          class="wavy-link"
           href="https://twitter.com/_yihui"
           target="_blank">Twitter</a
         >. Phew.
