Past changes from 2 months ago

--- a/src/layouts/Article.astro
+++ b/src/layouts/Article.astro
@@ -21,7 +21,7 @@ const { frontmatter } = Astro.props;
     <meta name="description" content={frontmatter.description} />
     <title>{frontmatter.title}</title>
   </head>
-  <body id="article-body">
+  <body>
     <div class="index-container">
       <div id="sidebar">
         <Sidebar />
