--- a/src/layouts/Sidebar.astro
+++ b/src/layouts/Sidebar.astro
@@ -11,16 +11,13 @@ const response = await fetch(
 );
 const data = await response.json();
 
-// const url = data[0].html_url;
+const url = data[0].html_url;
 
-// const rawDate = data[0]!.commit!.committer!.date as string;
-// const js = Date.parse(rawDate);
-// const timestamp = js;
-// const date = new Date(timestamp);
-// const dateFormat = date.toDateString();
-
-const url = "https://google.com";
-const dateFormat = "Loading...";
+const rawDate = data[0]!.commit!.committer!.date as string;
+const js = Date.parse(rawDate);
+const timestamp = js;
+const date = new Date(timestamp);
+const dateFormat = date.toDateString();
 ---
 
 <div class="sidebar-container">
