--- a/src/layouts/Note.astro
+++ b/src/layouts/Note.astro
@@ -6,6 +6,7 @@ import "../styles/global.scss";
 import "../styles/index.scss";
 import "../styles/article.scss";
 import "../styles/notes.scss";
+import { ViewTransitions } from 'astro:transitions';
 
 const { frontmatter } = Astro.props;
 ---
@@ -17,6 +18,7 @@ const { frontmatter } = Astro.props;
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="description" content={frontmatter.description} />
     <title>{frontmatter.title}</title>
+    <ViewTransitions />
   </head>
   <body>
     <div class="index-container">
