--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,7 @@ import Sidebar from "../layouts/Sidebar.astro";
 import WorkTable from "../components/WorkTable"
 import "../styles/global.scss";
 import "../styles/index.scss";
+import { ViewTransitions } from 'astro:transitions';
 ---
 
 <html lang="en">
@@ -13,6 +14,7 @@ import "../styles/index.scss";
     <meta name="generator" content={Astro.generator} />
     <meta name="description" content="Yihui Hu personal site">
     <title>Yihui Hu</title>
+    <ViewTransitions />
   </head>
   <body>
     <div class="index-container">
