Hidden writing for now

--- a/src/layouts/Sidebar.astro
+++ b/src/layouts/Sidebar.astro
@@ -27,10 +27,11 @@ const dateFormat = date.toDateString();
   </span>
   <div class="about-container">
     <span class="about-blurb">
-      I like to design and program. Sometimes I <a
+      I like to design and program. Currently studying Computer Science at Tufts.
+      {/* Sometimes I <a
         href="/notes"
         class="wavy-link">write</a
-      >. Currently studying Computer Science at Tufts.
+      >. */}
     </span>
     <div class="about-links">
       I'm also on:
