--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -38,7 +38,8 @@ import { ViewTransitions } from 'astro:transitions';
             </span>
             <span>
               You can view my CV <a
-                href="/assets/about/Yihui_Hu_CV_2023.pdf"
+                href="https://drive.google.com/file/d/1O5RdirrU7IDvmsVPGWqLS91VsayWJtmD/view?usp=sharing"
+                target="_blank"
                 class="wavy-link">here</a
               >.
             </span>
