Updated for winter

--- a/src/components/Currently.astro
+++ b/src/components/Currently.astro
@@ -5,11 +5,12 @@ import "../styles/currently.scss";
 <div>
   <span>I'm currently:</span>
   <div id="currently-container">
-    <video id="currently-image" autoplay loop muted playsinline>
+    <img id="currently-image" src="/assets/teh-tarik.png" />
+    <!-- <video id="currently-image" autoplay loop muted playsinline>
       <source src="/assets/fireworks.mov" type="video/mp4" />
-    </video>
+    </video> -->
     <div id="currently-info">
-      <span>Enjoying summer 🍉☀️⛱️</span>
+      <span>Eating lots in winter</span>
     </div>
   </div>
 </div>
