--- a/src/components/Reading.astro
+++ b/src/components/Reading.astro
@@ -10,9 +10,9 @@ import "../styles/currently.scss";
       target="_blank"><img id="currently-image" src="/assets/reading.jpg" /></a
     >
     <div id="currently-info">
-      <span>Klara and the Sun</span>
-      <span>by Kazuo Ishiguro</span>
-      <span>Jun 2023</span>
+      <span>Typographic Knitting</span>
+      <span>by Rudiger Schlomer</span>
+      <span>Nov 2023</span>
     </div>
   </div>
 </div>
